# VulnebAIgent_GTU_Cyber

./: .gitignore  README.md  agent.py  findings.json  findings_report.md  main.py  pyproject.toml  requirements.txt
Agents/: command_executor.py  error_handler.py  execution_monitor.py  report_writer.py  senior_reviewer.py  strategy_generator.py
Logs/: log-17-05-2025-14-12-46.json  log-17-05-2025-14-22-56.json  log-17-05-2025-14-24-08.json
docs/: FILE_OVERVIEW.md
src/: __init__.py
src/agents/: __init__.py  command_executor.py  error_handler.py  execution_monitor.py  report_writer.py  senior_reviewer.py  strategy_generator.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  agent.py  main.py
src/utils/: __init__.py  utils.py
tests/: run_tests.py  test_agents.py
web-project/: README.md
web-project/backend/: app.py  requirements.txt
web-project/frontend/: package-lock.json  package.json
web-project/frontend/public/: index.html  manifest.json
web-project/frontend/src/: App.css  App.js
web-project/frontend/src/components/: Navbar.js
web-project/frontend/src/pages/: Home.js  NewScan.js  Report.js  ScanDetails.js
web-project/frontend/src/services/: api.js  socket.js
