[project]
name = "vulneb-aigent"
version = "0.1.0"
description = "Automated Vulnerability Scanning with Agentic AI "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "openai>=1.79.0",
    "pexpect>=4.9.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
